# rag_tutorial

./: .gitignore  README.md  pyproject.toml  requirements.txt
corpus/: nova.txt  nova_add-secgroup.man  nova_add-secgroup.txt  nova_agent-create.txt  nova_agent-delete.txt  nova_agent-list.txt  nova_agent-modify.txt  nova_aggregate-add-host.txt  nova_aggregate-cache-images.txt  nova_aggregate-create.txt  nova_aggregate-delete.txt  nova_aggregate-list.txt  nova_aggregate-remove-host.txt  nova_aggregate-set-metadata.txt  nova_aggregate-show.txt  nova_aggregate-update.txt  nova_availability-zone-list.txt  nova_backup.txt  nova_bash-completion.txt  nova_boot.txt  nova_clear-password.txt  nova_console-log.txt  nova_delete.txt  nova_diagnostics.txt  nova_evacuate.txt  nova_flavor-access-add.txt  nova_flavor-access-list.txt  nova_flavor-access-remove.txt  nova_flavor-create.txt  nova_flavor-delete.txt  nova_flavor-key.txt  nova_flavor-list.txt  nova_flavor-show.txt  nova_flavor-update.txt  nova_force-delete.txt  nova_get-mks-console.txt  nova_get-password.txt  nova_get-rdp-console.txt  nova_get-serial-console.txt  nova_get-spice-console.txt  (+89 more)
embedding_reranker_demo/: README.md  embedding_reranker_comparison.py  embedding_reranker_demo.py  quick_demo.py  requirements.txt
embedding_reranker_demo/cache/: documents.pkl  embeddings.pkl  reranker_cache.pkl
solutions/01_basic/: README.md  basic_rag.py  requirements.txt
solutions/02_intermediate/: .env.example  README.md  config.py  langchain_rag.py  requirements.txt
solutions/03_advanced/: README.md  config.yaml  (+1 more)
(+16 files in other folders)
